# Project_Pilotguard

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/notebooks/: train_pilotguard.ipynb
backend/scripts/: clean_data.py  demo_webcam.py  train_hpc.py
backend/src/api/: alert_engine.py  inference.py  main.py  models.py  session_store.py  ws_handler.py
backend/src/cv/: __init__.py  adaptive_threshold.py  blink_detector.py  ear.py  face_detector.py  kalman.py  landmark_extractor.py  mar.py  perclos.py  pipeline.py
backend/src/data/: augmentation.py  cleaning.py
backend/src/ml/: bayesian_confidence.py  dinov2_features.py  fatigue_scorer.py  geometric_features.py  hmm_cognitive.py  train_dinov2_head.py  train_geometric.py  wavelet_features.py
backend/src/utils/: config.py
backend/tests/: test_adaptive_threshold.py  test_api.py  test_bayesian_confidence.py  test_blink_detector.py  test_ear.py  test_fatigue_scorer.py  test_kalman.py  test_landmark_extractor.py  test_mar.py  test_perclos.py  test_placeholder.py  test_wavelet_features.py
configs/: training_config.yaml
data/: README.md
docs/: create_figures.py  create_presentation.py
frontend/: index.html  oxlint.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: routeTree.ts
frontend/src/app/routes/: __root.tsx  history.tsx  index.tsx  monitor.tsx
frontend/src/hooks/: useMediaDevices.ts
frontend/src/lib/: api.ts  constants.ts  schemas.ts
frontend/src/stores/: alertStore.ts  monitorStore.ts  settingsStore.ts
frontend/src/types/: monitoring.ts  session.ts
scripts/: HPC_GUIDE.md  slurm_features_only.sh  slurm_template.sh  slurm_train_all.sh  slurm_train_profile.sh
(+11 files in other folders)
