[project]
name = "pilotguard"
version = "0.1.0"
description = "Real-time pilot cognitive state monitoring via computer vision and ML"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mediapipe>=0.10.18",
    "opencv-python-headless>=4.10.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "filterpy>=1.4.5",
    "pandas>=2.2.0",
    "albumentations>=1.4.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "hmmlearn>=0.3.0",
    "onnxruntime>=1.19.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "PyWavelets>=1.7.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "tensorboard>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
